--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{
+{ 
+  "homepage": "https://makkut.github.io/todolist-react-firebase",
   "name": "todo",
   "version": "0.1.0",
   "private": true,
@@ -6,14 +7,21 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^9.6.3",
+    "gh-pages": "^3.2.3",
+    "materialize-css": "^1.0.0-rc.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "uid": "^2.0.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
