--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{ 
+{
   "homepage": "https://makkut.github.io/todolist-react-firebase",
   "name": "todo",
   "version": "0.1.0",
@@ -8,7 +8,6 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.6.3",
-    "gh-pages": "^3.2.3",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -42,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
