--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@testing-library/user-event": "^13.5.0",
         "firebase": "^9.6.3",
         "materialize-css": "^1.0.0-rc.2",
+        "node-sass": "8.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.2.1",
