--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
         "@testing-library/user-event": "^13.5.0",
         "firebase": "^9.6.3",
         "materialize-css": "^1.0.0-rc.2",
-        "node-sass": "8.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.2.1",
-        "react-scripts": "5.0.0",
+        "react-scripts": "^5.0.1",
         "uid": "^2.0.0",
         "web-vitals": "^2.1.3"
     },
@@ -44,6 +43,8 @@
         ]
     },
     "devDependencies": {
-        "gh-pages": "^3.2.3"
+        "gh-pages": "^3.2.3",
+        "node-sass": "^8.0.0",
+        "sass": "^1.58.0"
     }
 }
