--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://makkut.github.io/todolist-react-firebase",
+    "homepage": "https://makkut.github.io",
     "name": "todo",
     "version": "0.1.0",
     "private": true,
