--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
         "@testing-library/user-event": "^13.5.0",
         "firebase": "^9.6.3",
         "materialize-css": "^1.0.0-rc.2",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
+        "react": "16.7.0-alpha.0",
+        "react-dom": "16.7.0-alpha.0",
         "react-router-dom": "^6.2.1",
         "react-scripts": "^5.0.1",
         "uid": "^2.0.0",
