--- a/package.json
+++ b/package.json
@@ -4,13 +4,10 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@testing-library/jest-dom": "^5.16.1",
-        "@testing-library/react": "^12.1.2",
-        "@testing-library/user-event": "^13.5.0",
         "firebase": "^9.6.3",
         "materialize-css": "^1.0.0-rc.2",
-        "react": "16.7.0-alpha.0",
-        "react-dom": "16.7.0-alpha.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "react-router-dom": "^6.2.1",
         "react-scripts": "^5.0.1",
         "uid": "^2.0.0",
